// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`no-regression snapshots across intake surfaces > consultant_interview baseline remains stable 1`] = `
{
  "collectionMode": "interview",
  "counts": {
    "eligible": 48,
    "nextRecommended": 10,
    "remediationQueue": 2,
    "required": 16,
    "visible": 48,
  },
  "mode": "full",
  "remediationQueue": [
    "a1",
    "a3",
  ],
  "surface": "consultant_interview",
  "topRecommended": [
    "d1",
    "a1",
    "a10",
    "a11",
    "a12",
    "a3",
    "a6",
    "a7",
    "b1",
    "b_health_1",
  ],
  "topRequired": [
    "a1",
    "a10",
    "a11",
    "a12",
    "a2",
    "a3",
    "a5",
    "a6",
    "a7",
    "b1",
  ],
  "topVisible": [
    "a1",
    "a2",
    "a3",
    "a4",
    "a5",
    "a6",
    "a7",
    "a8",
    "a9",
    "b1",
  ],
  "versions": {
    "layoutVersion": "1.1.0",
    "policyVersion": "1.4.0",
    "questionBankVersion": "1.3.0",
    "resolverVersion": "1.1.0",
    "sequencingVersion": "1.0.0",
  },
}
`;

exports[`no-regression snapshots across intake surfaces > pre_brief + client_form baseline remains stable 1`] = `
{
  "collectionMode": "pre_brief",
  "counts": {
    "eligible": 7,
    "nextRecommended": 7,
    "remediationQueue": 0,
    "required": 4,
    "visible": 7,
  },
  "mode": "express",
  "remediationQueue": [],
  "surface": "client_form",
  "topRecommended": [
    "f2",
    "f1",
    "a10",
    "a6",
    "a7",
    "b1",
    "f8",
  ],
  "topRequired": [
    "a10",
    "a6",
    "b1",
    "f1",
  ],
  "topVisible": [
    "a6",
    "a7",
    "b1",
    "f1",
    "f2",
    "f8",
    "a10",
  ],
  "versions": {
    "layoutVersion": "1.1.0",
    "policyVersion": "1.4.0",
    "questionBankVersion": "1.3.0",
    "resolverVersion": "1.1.0",
    "sequencingVersion": "1.0.0",
  },
}
`;

exports[`no-regression snapshots across intake surfaces > public_discovery baseline remains stable 1`] = `
{
  "collectionMode": "discovery",
  "counts": {
    "eligible": 36,
    "nextRecommended": 3,
    "remediationQueue": 0,
    "required": 16,
    "visible": 9,
  },
  "mode": "discovery",
  "remediationQueue": [],
  "surface": "public_discovery",
  "topRecommended": [
    "d1",
    "a1",
    "a7",
  ],
  "topRequired": [
    "a1",
    "a10",
    "a11",
    "a12",
    "a2",
    "a3",
    "a5",
    "a6",
    "a7",
    "b1",
  ],
  "topVisible": [
    "a2",
    "a1",
    "a4",
    "a7",
    "d1",
    "d1b",
    "d2",
    "f1",
    "f9",
  ],
  "versions": {
    "layoutVersion": "1.1.0",
    "policyVersion": "1.4.0",
    "questionBankVersion": "1.3.0",
    "resolverVersion": "1.1.0",
    "sequencingVersion": "1.0.0",
  },
}
`;

exports[`no-regression snapshots across intake surfaces > self_serve + client_form baseline remains stable 1`] = `
{
  "collectionMode": "self_serve",
  "counts": {
    "eligible": 48,
    "nextRecommended": 10,
    "remediationQueue": 2,
    "required": 16,
    "visible": 48,
  },
  "mode": "full",
  "remediationQueue": [
    "a1",
    "a3",
  ],
  "surface": "client_form",
  "topRecommended": [
    "d1",
    "a1",
    "a10",
    "a11",
    "a12",
    "a3",
    "a6",
    "a7",
    "b1",
    "b_health_1",
  ],
  "topRequired": [
    "a1",
    "a10",
    "a11",
    "a12",
    "a2",
    "a3",
    "a5",
    "a6",
    "a7",
    "b1",
  ],
  "topVisible": [
    "a1",
    "a2",
    "a3",
    "a4",
    "a5",
    "a6",
    "a7",
    "a8",
    "a9",
    "b1",
  ],
  "versions": {
    "layoutVersion": "1.1.0",
    "policyVersion": "1.4.0",
    "questionBankVersion": "1.3.0",
    "resolverVersion": "1.1.0",
    "sequencingVersion": "1.0.0",
  },
}
`;
